Update script to regenerate reports for paper metadata files

--- a/docs/report_2024-06-21.md
+++ b/docs/report_2024-06-21.md
@@ -2,57 +2,55 @@
 
 ## Generative AI applied to supporting software developers
 ### AgileCoder: Dynamic Collaborative Agents for Software Development based on Agile Methodology
-💡 *Why it's relevant*: This paper explores a multi-agent system that integrates Agile Methodology into software development, assigning roles to different agents (Product Manager, Developer, Tester) for collaborative work. This is highly relevant to HCI as it examines the human-like interactions between agents in a software development context.
+💡 *Why it's relevant*: This paper proposes a multi-agent system that integrates Agile Methodology (AM) into software development, enhancing efficiency by organizing work into sprints and dynamically generating a code dependency graph. This approach offers a compelling way to leverage generative AI for collaborative development workflows, providing insights for human-computer interaction in software engineering.
+
 👉 [ Read full paper](https://arxiv.org/pdf/2406.11912)
+
+### REPOEXEC: Evaluate Code Generation with a Repository-Level Executable Benchmark
+💡 *Why it's relevant*: This paper introduces a benchmark for evaluating code generation at the repository-level scale, focusing on executability, functional correctness, and cross-file contexts. By analyzing the performance of different models in this setting, researchers can better understand the limitations and opportunities for generative AI in supporting real-world software development.
+
+👉 [ Read full paper](https://arxiv.org/pdf/2406.11927)
 
 ## Prompt engineering techniques that improve AI system performance
 ### Whiteboard-of-Thought: Thinking Step-by-Step Across Modalities
-💡 *Why it's relevant*:  This paper introduces a simple but powerful prompting technique called "whiteboard-of-thought" to unlock the visual reasoning capabilities of multimodal LLMs. This is relevant to HCI as it explores how prompting can enhance AI's reasoning abilities and potentially lead to more intuitive and engaging user interactions.
+💡 *Why it's relevant*:  This paper introduces a simple yet effective method, whiteboard-of-thought prompting, to unlock the visual reasoning capabilities of multimodal large language models. By prompting models to draw out reasoning steps as images, this technique helps bridge the gap between text-based reasoning and visual understanding, presenting a new approach to prompt engineering for complex tasks.
+
 👉 [ Read full paper](https://arxiv.org/pdf/2406.14562)
 
-### Learn Beyond The Answer: Training Language Models with Reflection for Mathematical Reasoning
-💡 *Why it's relevant*:  This paper explores a novel training technique called "reflective augmentation" that encourages LLMs to engage in reflective thinking and deeper understanding of problems. This is relevant to HCI as it investigates how prompting techniques can guide AI towards more complex reasoning and problem-solving, which can have implications for user interfaces that facilitate deeper engagement with AI systems.
-👉 [ Read full paper](https://arxiv.org/pdf/2406.12050)
+### Instruction Pre-Training: Language Models are Supervised Multitask Learners
+💡 *Why it's relevant*: This paper proposes a framework for supervised multitask pre-training called Instruction Pre-Training, which enhances pre-trained language models by augmenting raw corpora with instruction-response pairs. This approach demonstrates the potential for large-scale supervised learning to improve model performance and adaptability across various tasks, offering a new direction for prompt engineering in multitask settings.
 
-### Hierarchical Prompting Taxonomy: A Universal Evaluation Framework for Large Language Models
-💡 *Why it's relevant*:  This paper proposes a hierarchical prompting taxonomy for evaluating LLMs, considering different levels of task complexity and prompting strategies. This is relevant to HCI because it investigates how prompting techniques can be used to assess AI capabilities and design better interfaces that cater to different levels of user expertise. 
-👉 [ Read full paper](https://arxiv.org/pdf/2406.12644)
+👉 [ Read full paper](https://arxiv.org/pdf/2406.14491)
 
 ## Human-in-the-loop machine learning for improved training or evaluation
-### Bootstrapping Language Models with DPO Implicit Rewards
-💡 *Why it's relevant*:  This paper presents a novel approach for aligning LLMs with human preferences by using the implicit reward model from Direct Preference Optimization (DPO) in a bootstrapping fashion. This is relevant to HCI as it explores how human feedback can be used to refine AI models in an iterative process, leading to more personalized and user-centric AI systems.
-👉 [ Read full paper](https://arxiv.org/pdf/2406.09760)
+### Intrinsic Evaluation of Unlearning Using Parametric Knowledge Traces
+💡 *Why it's relevant*: This paper proposes a new methodology for evaluating unlearning methods in large language models by considering changes in the parametric knowledge traces of unlearned concepts. It addresses a critical aspect of human-in-the-loop learning by highlighting the importance of internal evaluation for ensuring that unwanted knowledge is effectively removed from models.
 
-### BPO: Supercharging Online Preference Learning by Adhering to the Proximity of Behavior LLM
-💡 *Why it's relevant*: This paper proposes an online preference optimization method that emphasizes the importance of the "proximity" of the learned LLM to the behavior LLM, which collects training samples. This is relevant to HCI as it highlights the significance of understanding how online feedback influences model learning and designing interfaces that facilitate seamless integration of user input into the learning process. 
-👉 [ Read full paper](https://arxiv.org/pdf/2406.12168)
+👉 [ Read full paper](https://arxiv.org/pdf/2406.11614)
 
-### From Crowdsourced Data to High-Quality Benchmarks: Arena-Hard and BenchBuilder Pipeline
-💡 *Why it's relevant*: This paper introduces a pipeline called "BenchBuilder" for automatically extracting high-quality prompts from crowdsourced data and creating offline benchmarks for evaluating LLMs. This is relevant to HCI as it investigates how human-generated data can be utilized to create more robust and representative evaluations of AI models, which can inform the development of more effective and user-friendly AI systems.
-👉 [ Read full paper](https://arxiv.org/pdf/2406.11939)
+### Measuring memorization in RLHF for code completion
+💡 *Why it's relevant*: This paper analyzes how training data memorization can surface and propagate through different stages of reinforcement learning with human feedback (RLHF). By investigating the relationship between memorization and RLHF, this paper provides valuable insights for understanding and mitigating potential privacy concerns in human-in-the-loop model training.
+
+👉 [ Read full paper](https://arxiv.org/pdf/2406.11715)
 
 ## Applications of Generative AI in user interface design and engineering
 ### HumanSplat: Generalizable Single-Image Human Gaussian Splatting with Structure Priors
-💡 *Why it's relevant*:  This paper proposes a method called "HumanSplat" for predicting 3D Gaussian Splatting properties of humans from a single image, enabling realistic novel-view synthesis. This is relevant to HCI as it explores how generative AI can be used for creating more realistic and interactive 3D representations of humans in virtual environments, potentially leading to more immersive and engaging user experiences.
+💡 *Why it's relevant*: This paper presents a new method, HumanSplat, for predicting the 3D Gaussian Splatting properties of any human from a single input image, enabling photorealistic novel-view synthesis. This has implications for user interface design by allowing for more realistic and interactive 3D representations of humans in virtual environments, fostering more immersive and engaging user experiences.
+
 👉 [ Read full paper](https://arxiv.org/pdf/2406.12459)
 
-### JEN-1 DreamStyler: Customized Musical Concept Learning via Pivotal Parameters Tuning
-💡 *Why it's relevant*: This paper presents a novel method for customized text-to-music generation that captures musical concepts from reference music and generates new pieces conforming to those concepts. This is relevant to HCI as it explores the application of generative AI in music creation and potentially opens up new avenues for designing interfaces that allow users to interact with AI systems to create personalized and expressive musical experiences.
-👉 [ Read full paper](https://arxiv.org/pdf/2406.12292)
+### ExVideo: Extending Video Diffusion Models via Parameter-Efficient Post-Tuning
+💡 *Why it's relevant*:  This paper introduces a novel post-tuning methodology for video synthesis models called ExVideo, allowing them to generate longer videos with reduced training costs. This development has the potential to revolutionize user interface design by enabling more dynamic and engaging video experiences, such as personalized content creation and interactive storytelling.
 
-### VIA: A Spatiotemporal Video Adaptation Framework for Global and Local Video Editing
-💡 *Why it's relevant*: This paper introduces a framework called "VIA" for adapting video editing models for global and local consistency, enabling more accurate and coherent video edits. This is relevant to HCI as it explores how generative AI can be used to enhance video editing tools and potentially create more user-friendly and powerful video editing interfaces.
-👉 [ Read full paper](https://arxiv.org/pdf/2406.12831)
+👉 [ Read full paper](https://arxiv.org/pdf/2406.14130)
 
 ## Techniques to explain AI systems behavior to users
 ### Probabilistic Conceptual Explainers: Trustworthy Conceptual Explanations for Vision Foundation Models
-💡 *Why it's relevant*:  This paper introduces a method called "PACE" that provides trustworthy conceptual explanations for vision transformers (ViTs), addressing the need for transparency and interpretability in AI systems. This is relevant to HCI as it explores how to make AI decision-making processes more understandable and interpretable for users, which is essential for building trust and ensuring responsible AI development.
+💡 *Why it's relevant*: This paper proposes a variational Bayesian explanation framework, dubbed ProbAbilistic Concept Explainers (PACE), for providing trustworthy post-hoc conceptual explanations for vision transformer models. By offering multi-level explanations and addressing key desiderata for explainability, PACE lays a foundation for more transparent and user-friendly AI systems in visual domains.
+
 👉 [ Read full paper](https://arxiv.org/pdf/2406.12649)
 
 ### Estimating Knowledge in Large Language Models Without Generating a Single Token
-💡 *Why it's relevant*: This paper proposes a probe called "KEEN" for estimating the knowledge of LLMs about specific entities without generating any text. This is relevant to HCI as it explores new ways to understand and evaluate the internal workings of AI systems, potentially leading to the development of more transparent and explainable AI interfaces.
-👉 [ Read full paper](https://arxiv.org/pdf/2406.12673)
+💡 *Why it's relevant*: This paper introduces KEEN, a simple probe that can estimate the knowledge of a language model about a certain entity without requiring the model to generate any text. This has implications for explainable AI by enabling more efficient and transparent methods for identifying knowledge gaps and understanding the reasoning behind model outputs.
 
-### From RAGs to rich parameters: Probing how language models utilize external knowledge over parametric information for factual queries
-💡 *Why it's relevant*:  This paper examines the use of Retrieval Augmented Generation (RAG) in LLMs and investigates how models rely on external knowledge vs. parametric memory. This is relevant to HCI because it explores how LLMs access and utilize information, which is crucial for understanding the limitations and potential biases in AI systems and for designing interfaces that provide users with more accurate and reliable information.
-👉 [ Read full paper](https://arxiv.org/pdf/2406.12824)
+👉 [ Read full paper](https://arxiv.org/pdf/2406.12673) 
