Fix report titles and clean up frontmatter processing

--- a/docs/2024-09-06/2409.00138.md
+++ b/docs/2024-09-06/2409.00138.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'Language Models Can't Keep Secrets: New Research Shows AI Agents Leak Sensitive Information'
+title: Language Models Can't Keep Secrets&#58; New Research Shows AI Agents Leak Sensitive Information
 permalink: 2024-09-06/2409.00138.html
 ---
 # Language Models Can't Keep Secrets: New Research Shows AI Agents Leak Sensitive Information
