--- a/docs/2024-09-20/2409.12193.md
+++ b/docs/2024-09-20/2409.12193.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'A New Framework Can Uncover the 3D 'Darkside' of a Single Image'
+title: A New Framework Can Uncover the 3D 'Darkside' of a Single Image
 permalink: 2024-09-20/2409.12193.html
 ---
 # A New Framework Can Uncover the 3D 'Darkside' of a Single Image
