--- a/docs/2024-10-18/2410.12491.md
+++ b/docs/2024-10-18/2410.12491.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'Cracking Open the Black Box: Reconstructing LLMs' Hidden Goals with Inverse Reinforcement Learning'
+title: Cracking Open the Black Box&#58; Reconstructing LLMs' Hidden Goals with Inverse Reinforcement Learning
 permalink: 2024-10-18/2410.12491.html
 ---
 # Cracking Open the Black Box: Reconstructing LLMs' Hidden Goals with Inverse Reinforcement Learning
