--- a/docs/2024-11-01/2410.16090.md
+++ b/docs/2024-11-01/2410.16090.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'LLMs Can Tell You When They're Confused, Study Shows'
+title: LLMs Can Tell You When They're Confused, Study Shows
 permalink: 2024-11-01/2410.16090/
 ---
 # LLMs Can Tell You When They're Confused, Study Shows
