First working version of chat with paper including the pdf file

--- a/docs/2024-11-22/2411.06559.md
+++ b/docs/2024-11-22/2411.06559.md
@@ -1,10 +1,9 @@
 ---
-layout: default
+layout: paper
 permalink: 2024-11-22/2411.06559/
+pdf_url: https://arxiv.org/pdf/2411.06559
 title: LLMs as World Models&#58; A New Paradigm for Web Agents
 ---
-
-# LLMs as World Models: A New Paradigm for Web Agents
 
 A new study published on arXiv shows that large language models (LLMs) can serve as surprisingly effective "world models" for navigating the complexities of the internet. Researchers at The Ohio State University and Orby AI have developed WEB-DREAMER, a system that uses LLMs to simulate the consequences of actions before taking them in a real-world web environment, significantly improving the performance of web agents.  This breakthrough could revolutionize how we build AI systems for online tasks.
 
