Make sure paper summaries use the paper page template

--- a/docs/2024-11-29/2411.12814.md
+++ b/docs/2024-11-29/2411.12814.md
@@ -1,12 +1,9 @@
 ---
-layout: default
-pdf_url: https://arxiv.org/pdf/
+layout: paper
+pdf_url: https://arxiv.org/pdf/2411.12814
 permalink: 2024-11-29/2411.12814/
-title: '```markdown'
+title: Researchers Create Massive Dataset to Advance Interactive Medical Image Segmentation
 ---
-
-
-# Researchers Create Massive Dataset to Advance Interactive Medical Image Segmentation
 
 **Shanghai, China** –  A team of researchers from Shanghai AI Laboratory, Sichuan University, and other institutions have released IMed-361M, a massive new benchmark dataset for interactive medical image segmentation (IMIS), along with a high-performing baseline model.  Their work, published on arXiv, addresses a critical bottleneck in the field: the lack of large, diverse, and densely annotated datasets needed to train robust and generalizable IMIS models.
 
@@ -31,4 +28,3 @@ Evaluations against existing state-of-the-art IMIS models revealed superior perf
 The release of IMed-361M and IMIS-Net represents a significant step forward for the field of interactive medical image segmentation. The availability of such a large-scale, diverse, and densely-masked dataset is expected to spur innovation and accelerate the development of more accurate, robust, and clinically useful IMIS models.
 
 The authors make the IMed-361M dataset and IMIS-Net model publicly available, encouraging further research and development within the community.  Future work might explore even more sophisticated interaction paradigms, further refining the quality control of the annotations, and improving model performance on challenging cases. The team hopes their contribution helps pave the way for wider adoption of IMIS technologies in clinical practice.
-```
