--- a/docs/2024-11-29/2411.14721.md
+++ b/docs/2024-11-29/2411.14721.md
@@ -1,6 +1,6 @@
 ---
-layout: default
-pdf_url: https://arxiv.org/pdf/
+layout: paper
+pdf_url: https://arxiv.org/pdf/2411.14721
 permalink: 2024-11-29/2411.14721/
 title: MolReFlect&#58; A New Framework for Fine-Grained Alignment Between Molecules
   and Texts
