--- a/docs/2024-11-29/2411.17465.md
+++ b/docs/2024-11-29/2411.17465.md
@@ -1,6 +1,6 @@
 ---
-layout: default
-pdf_url: https://arxiv.org/pdf/
+layout: paper
+pdf_url: https://arxiv.org/pdf/2411.17465
 permalink: 2024-11-29/2411.17465/
 title: ShowUI&#58; A New Vision-Language-Action Model for GUI Visual Agents
 ---
