--- a/docs/2024-11-29/2411.17673.md
+++ b/docs/2024-11-29/2411.17673.md
@@ -1,13 +1,9 @@
 ---
-layout: default
-pdf_url: https://arxiv.org/pdf/
+layout: paper
+pdf_url: https://arxiv.org/pdf/2411.17673
 permalink: 2024-11-29/2411.17673/
-title: '```markdown'
+title: SketchAgent&#58; A Language-Driven AI That Sketches Like a Human
 ---
-
-
-# SketchAgent: A Language-Driven AI That Sketches Like a Human
-
 A new artificial intelligence (AI) system, called SketchAgent, can generate remarkably human-like sketches from simple text descriptions.  Developed by researchers at MIT and Stanford University, the system avoids the need for extensive training datasets by cleverly leveraging the capabilities of large language models (LLMs).  Instead of training on a massive collection of hand-drawn sketches, SketchAgent uses an off-the-shelf multimodal LLM and an intuitive sketching language to create its drawings, stroke by stroke, in a manner that mirrors the creative process of human sketching.
 
 The core innovation lies in how SketchAgent translates natural language instructions into visual output. Unlike previous AI sketch generators that optimize all strokes simultaneously, SketchAgent generates its drawings sequentially.  This approach is inspired by the iterative, dynamic nature of human drawing, where a person builds up a picture step by step, refining the work as they go along.
@@ -21,4 +17,3 @@ SketchAgent's capabilities were tested in several scenarios.  It was shown to ge
 A key finding from user studies was that people found SketchAgent's sketches more similar to human sketches than other, more sophisticated, AI-generated drawings that only optimized for final output.  This emphasizes the significance of the sequential sketching process in creating drawings that resonate with human aesthetic sensibilities.
 
 While the research demonstrates the significant potential of this approach, some limitations remain.  Currently, SketchAgent's performance depends on the capabilities of the underlying LLM, and it sometimes struggles with highly detailed or complex drawings. The research team notes the ongoing advances in LLM technology and how these advancements will likely further improve SketchAgent's output in the future. Despite these limitations, SketchAgent showcases a promising new path towards more human-centric, creative AI systems capable of seamlessly integrating with human imagination and problem-solving.
-```
