--- a/docs/2024-11-29/2411.18279.md
+++ b/docs/2024-11-29/2411.18279.md
@@ -1,6 +1,6 @@
 ---
-layout: default
-pdf_url: https://arxiv.org/pdf/
+layout: paper
+pdf_url: https://arxiv.org/pdf/2411.18279
 permalink: 2024-11-29/2411.18279/
 title: LLM-Brained GUI Agents&#58; A New Era of Human-Computer Interaction
 ---
